# whisperlm

./: .gitignore  README.md  config.example.yaml  pyproject.toml  test_llm_connection.py  whisperlm.service
src/whisperlm/: __init__.py  config.py  main.py
src/whisperlm/api/: legacy_routes.py  models.py  routes.py
src/whisperlm/services/: separation_service.py  task_service.py  whisperx_service.py
src/whisperlm/utils/: __init__.py  logger.py
tests/: test_diarization.py  test_llm.py  test_transcribe.py
